--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -144,6 +144,7 @@
 <script type="text/javascript" src="js/portal/auth/menu/selectAccountDomain.directive.js"></script>
 <script type="text/javascript" src="js/portal/auth/2fa/disableTwoFactorAuth.directive.js"></script>
 <script type="text/javascript" src="js/portal/auth/login/passwordRestore.controller.js"></script>
+<script type="text/javascript" src="js/portal/auth/login/resendRegistrationEmail.controller.js"></script>
 <script type="text/javascript" src="js/portal/auth/login/forgotpass.controller.js"></script>
 <script type="text/javascript" src="js/portal/auth/login/twoFactorAuthCodeModal.controller.js"></script>
 <script type="text/javascript" src="js/portal/auth/login/login.controller.js"></script>
