--- a/code/parts/signup/form-contact-info.tpl.html
+++ b/code/parts/signup/form-contact-info.tpl.html
@@ -117,7 +117,7 @@
           <a ui-sref="^" class="btn btn-default">
             <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
           </a>
-          <button class="btn btn-success" ng-disabled="_loading || newUser.$invalid" ng-click="$ctrl.onSignUp($ctrl.model)">
+          <button class="btn btn-success" ng-disabled="_loading || newUser.$invalid ||(($ctrl.model.password != $ctrl.model.passwordConfirm ||newUser.passwordConfirm.$invalid) &&newUser.passwordConfirm.$dirty )" ng-click="$ctrl.onSignUp($ctrl.model)">
            <i class="glyphicon glyphicon-log-in"></i> SignUp
           </button>
         </div>
