--- a/code/parts/auth/block/user-login-logout.html
+++ b/code/parts/auth/block/user-login-logout.html
@@ -1,8 +1,8 @@
 <ul class="nav navbar-nav navbar-right user">
   <li class="user-info fit" data-ng-if="isAuthorized">
     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-      <strong>{{::user.firstname}} {{::user.lastname}}</strong>
-      <span>({{::user.role}})</span>
+      <strong>{{user.firstname}} {{user.lastname}}</strong>
+      <span>({{user.role}})</span>
       <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
