--- a/code/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
+++ b/code/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
@@ -2,7 +2,7 @@
   <div class="alert alert-info" ng-if="!config.domain">
     Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
   </div>
-  <div class="alert alert-info" ng-if="!_data && !_loading">
+  <div class="alert alert-info" ng-if="config.domain && !_data && !_loading">
     No data to display
   </div>
   <div class="alert alert-info" ng-if="_loading">
