--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -427,12 +427,14 @@
               <table class="table table-stripped table-condensed">
                 <thead>
                   <tr>
-                    <th style="width: 40%">Account</th>
+                    <th style="width: 20%">Account</th>
                     <th class="text-right">Hits</th>
                     <th class="text-right">Traffic sent</th>
                     <th class="text-right">Traffic received</th>
                     <th class="text-right">BW sent</th>
                     <th class="text-right">BW received</th>
+                    <th class="text-right">Active Domains</th>
+                    <th class="text-right">Active Apps</th>
                   </tr>
                 </thead>
                 <tbody ng-repeat="account in report.accounts">
@@ -443,6 +445,8 @@
                     <td class="text-right">{{account.received_bytes}}</td>
                     <td class="text-right">{{account.billable_sent_bps}}</td>
                     <td class="text-right">{{account.billable_received_bps}}</td>
+                    <td class="text-right">{{account.active_domains || 0}}</td>
+                    <td class="text-right">{{account.active_apps || 0}}</td>
                   </tr>
                 </tbody>
               </table>
