--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -110,6 +110,15 @@
               <td>{{getRelativeDate(item.updated_at)}}</td>
               <td class="actions text-right">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+                <a ng-click="onGoToUsageReport(item)"  uisref="index.billing.usage({acc_id: item.id})" ng-if="!item.loading" tooltip="Usage Report">
+                  <i class="fa fa-balance-scale"></i>
+                </a>
+                <a ng-click="onGoToBillingPlans(item)"  ng-if="!item.loading" tooltip="Change Billing Plan">
+                  <i class="fa fa-arrow-circle-up"></i>
+                </a>
+                <a ng-click="onGoToBillingStatement(item)" ng-if="!item.loading" tooltip="Statements">
+                  <i class="fa fa-money"></i>
+                </a>
                 <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Company">
                   <i class="glyphicon glyphicon-pencil"></i>
                 </a>
