--- a/code/parts/profile/directives/subscription-summary.tpl.html
+++ b/code/parts/profile/directives/subscription-summary.tpl.html
@@ -1,45 +1,65 @@
-<section class="subscription-summary">
-  <div class="stats-highlights-table">
-    <div class="stats-highlights-table-row">
-      <section class="col-sm stats-total">
-        <header>
-          <h1 class="stats-heading">Total Revenue</h1>
-        </header>
-        <p class="stats-data total_revenue">{{subscription.total_revenue_in_cents |MonetaryUnit| currency}}</p>
-      </section>
-      <section class="col-sm stats-balance">
-        <header>
-          <h1 class="stats-heading">Current Balance</h1>
-        </header>
-        <p class="stats-data">{{subscription.balance_in_cents | MonetaryUnit|currency }}</p>
-      </section>
-      <!-- </div> -->
-      <!-- <div class="stats-highlights-table-row"> -->
-      <section class="col-sm stats-since">
-        <header>
-          <h1 class="stats-heading">Subscriber since</h1>
-        </header>
-        <p class="stats-data">{{subscription.current_period_started_at | date}} </p>
-      </section>
-      <section class="col-sm stats-renewal">
-        <header>
-          <h1 class="stats-heading">Next Billing</h1>
-        </header>
-        <p class="stats-data">{{subscription.next_assessment_at | date }} </p>
-      </section>
-      <section class="col-sm stats-state">
-        <header>
-          <h1 class="stats-heading">Status </h1>
-        </header>
-        <p class="stats-data">{{subscription.state | date }} </p>
-      </section>
-      <section class="col-sm stats-state">
-        <header>
-          <h1 class="stats-heading">Activated At</h1>
-        </header>
-        <p class="stats-data">{{subscription.activated_at | date }} </p>
-      </section>
-      <!-- </div> -->
-    </div>
-    <!--   <pre> {{subscription|json}} </pre> -->
+<section class="subscription-summary col-md-12">
+  <div class="col-md-6">
+    <table class="table table-condensed">
+      <colgroup>
+        <col class="col-sm-3">
+      </colgroup>
+      <tr>
+        <td>Total Payments</td>
+        <td>{{subscription.total_revenue_in_cents |MonetaryUnit| currency}}</td>
+      </tr>
+      <tr>
+        <td>Current Balance</td>
+        <td>{{subscription.balance_in_cents | MonetaryUnit| currency }}</td>
+      </tr>
+      <tr>
+        <td>Subscriber Since</td>
+        <td>{{subscription.current_period_started_at | date}} </td>
+      </tr>
+      <tr>
+        <td>Next Billing</td>
+        <td>{{subscription.product_price_in_cents| MonetaryUnit| currency }} on {{subscription.next_assessment_at | date }} </td>
+      </tr>
+      <tr>
+        <td>Status </td>
+        <td>{{subscription.state | firstUpper}}</td>
+      </tr>
+      <tr>
+        <td>Activated At</td>
+        <td>{{subscription.activated_at | date }}</td>
+      </tr>
+    </table>
+  </div>
+  <div class="col-md-6 ">
+    <table class="table table-condensed">
+      <colgroup>
+        <col class="col-sm-3">
+      </colgroup>
+      <tr>
+        <td>First Name</td>
+        <td>{{subscription.credit_card.first_name}} </td>
+      </tr>
+      <tr>
+        <td>Last Name</td>
+        <td>{{subscription.credit_card.last_name}} </td>
+      </tr>
+      <tr>
+        <td>Card Number</td>
+        <td>{{subscription.credit_card.masked_card_number}}</td>
+      </tr>
+      <tr>
+        <td>Expiration</td>
+        <td>{{subscription.credit_card.expiration_month}} / {{subscription.credit_card.expiration_year}}</td>
+      </tr>
+      <tr>
+        <td>Card Type </td>
+        <td>{{subscription.credit_card.card_type | uppercase}}</td>
+      </tr>
+      <!--     <tr>
+        <td>Activated At</td>
+        <td>{{subscription.activated_at | date }}</td>
+      </tr> -->
+    </table>
+  </div>
+  <!--   <pre> {{subscription|json}} </pre> -->
 </section>
