--- a/code/dev/parts/profile/statements.html
+++ b/code/dev/parts/profile/statements.html
@@ -49,7 +49,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
-                                <h2>Summary</h2>
+                                <h2>Billing Summary</h2>
                             </div>
                         </div>
                     </div>
