--- a/code/parts/dashboard/widgets/heatmaps/edit-heatmap.html
+++ b/code/parts/dashboard/widgets/heatmaps/edit-heatmap.html
@@ -10,4 +10,10 @@
       <option value="24">Last 24 Hours</option>
     </select>
   </div>
+  <div class="form-group">
+    <select class="form-control fixed" ng-model="config.filters.map_type">
+      <option value="world">World</option>
+      <option value="usa">USA</option>
+    </select>
+  </div>
 </form>
