--- a/code/parts/reports/charts/fbt-distribution.html
+++ b/code/parts/reports/charts/fbt-distribution.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-info" ng-click="reloadTrafficStats()">
+        <button class="btn btn-info" ng-click="reloadTrafficStats()" ng-disabled="_loading || !ngDomain">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
           Update Report
         </button>
