--- a/code/parts/reports/charts/fbt-heatmap.html
+++ b/code/parts/reports/charts/fbt-heatmap.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-info" ng-click="reloadFBTStats()">
+        <button class="btn btn-info" ng-click="reloadFBTStats()" ng-disabled="_loading || !ngDomain">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
           Update Report
         </button>
