--- a/code/parts/reports/filters/mobile-top-objects-filters.html
+++ b/code/parts/reports/filters/mobile-top-objects-filters.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="form-group">
-      <button class="btn btn-info" ng-click="update()">
+      <button class="btn btn-info" ng-click="update()" ng-disabled="flDisabled">
         <i class="glyphicon glyphicon-refresh"></i>&nbsp;Update Report
       </button>
     </div>
