--- a/code/parts/reports/filters/mobile-traffic-filters.html
+++ b/code/parts/reports/filters/mobile-traffic-filters.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="form-group">
-      <button class="btn btn-info" ng-click="update()">
+      <button class="btn btn-info" ng-click="update()" ng-disabled="flDisabled">
         <i class="glyphicon glyphicon-refresh"></i>&nbsp;Update Report
       </button>
     </div>
