--- a/code/parts/reports/mobile-top-objects.html
+++ b/code/parts/reports/mobile-top-objects.html
@@ -36,6 +36,7 @@
                    fl-countries="countries"
                    fl-operators="operators"
                    fl-networks="networks"
+                   fl-disabled="_loading || !application"
                    heading="Top Most Requested Objects"></div>
             </div>
           </div>
@@ -51,6 +52,7 @@
                    fl-countries="countries"
                    fl-operators="operators"
                    fl-networks="networks"
+                   fl-disabled="_loading || !application"
                    report-type="full"
                    heading="Top Objects With Slowest Response Time"></div>
             </div>
@@ -67,6 +69,7 @@
                    fl-countries="countries"
                    fl-operators="operators"
                    fl-networks="networks"
+                   fl-disabled="_loading || !application"
                    report-type="first_byte"
                    heading="Top Objects With Slowest First Byte Time"></div>
             </div>
@@ -83,6 +86,7 @@
                    fl-countries="countries"
                    fl-operators="operators"
                    fl-networks="networks"
+                   fl-disabled="_loading || !application"
                    report-type="not_found"
                    heading="Top Objects With 404 Responses"></div>
             </div>
@@ -99,6 +103,7 @@
                    fl-countries="countries"
                    fl-operators="operators"
                    fl-networks="networks"
+                   fl-disabled="_loading || !application"
                    report-type="cache_missed"
                    heading="Top Objects With Cache Misses"></div>
             </div>
@@ -115,6 +120,7 @@
                    fl-countries="countries"
                    fl-operators="operators"
                    fl-networks="networks"
+                   fl-disabled="_loading || !application"
                    report-type="failed"
                    heading="Top Objects With Completion Failures"></div>
             </div>
@@ -131,6 +137,7 @@
                    fl-countries="countries"
                    fl-operators="operators"
                    fl-networks="networks"
+                   fl-disabled="_loading || !application"
                    heading="Top Objects With 5XX Error Codes"></div>
             </div>
           </div>
